@@ -5,4 +5,5 @@ Revision history for AstroScript
              Helpers module moved from 'lib' to 'script'
 2019-06-20 - floating point error in test fixed
 
-2019-07-14 - module for calculating rise, set and transit events
+2019-08-10 - module for calculating rise, set and transit events with example
+             script.
